# runa

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apollo/: Cargo.toml
apollo/src/: globals.rs  lib.rs  renderer_capability.rs  time.rs  utils.rs
apollo/src/globals/: mod.rs  xdg_shell.rs
apollo/src/objects/: compositor.rs  input.rs  mod.rs  shm.rs  xdg_shell.rs
apollo/src/shell/: buffers.rs  mod.rs  output.rs  surface.rs  xdg.rs
apollo/src/utils/: geometry.rs  mod.rs
crescent/: Cargo.toml
crescent/shaders/: shader.wgsl
crescent/src/: main.rs  render.rs  shell.rs
input-event-codes/: Cargo.toml  build.rs  import.h
input-event-codes-sys/: Cargo.toml
protocols/: wayland.xml
runa-core/: Cargo.toml
runa-core/src/: connection.rs  error.rs  globals.rs  lib.rs  objects.rs  provide_any.rs  renderer_capability.rs  server.rs  utils.rs
runa-core/src/client/: event_dispatcher.rs  event_handlers.rs  mod.rs  store.rs  traits.rs
runa-core/src/events/: aggregate.rs  broadcast.rs  mod.rs  single_state.rs
runa-core/src/server/: mod.rs  traits.rs
runa-io/: Cargo.toml
runa-io-traits/: Cargo.toml
runa-io-traits/src/: lib.rs
runa-io/src/: buf.rs  lib.rs  utils.rs
runa-macros/: Cargo.toml
runa-macros/src/: lib.rs
runa-macros/tests/: generate.rs
runa-orbiter/: Cargo.toml
runa-orbiter/src/: lib.rs
runa-orbiter/src/globals/: mod.rs  xdg_shell.rs
runa-orbiter/src/objects/: compositor.rs  input.rs  mod.rs  shm.rs  xdg_shell.rs
runa-orbiter/src/shell/: buffers.rs  mod.rs  output.rs  surface.rs  xdg.rs
runa-orbiter/src/shell/surface/: mod.rs
runa-orbiter/src/shell/surface/roles/: mod.rs  subsurface.rs  xdg.rs
runa-orbiter/src/utils/: geometry.rs  mod.rs
runa-wayland-protocols/: Cargo.toml  build.rs
runa-wayland-protocols/spec/: wayland.xml
runa-wayland-protocols/src/: lib.rs
runa-wayland-types/: Cargo.toml
runa-wayland-types/src/: lib.rs
wayland-tools/codegen/: Cargo.toml
wayland-tools/codegen/src/: lib.rs
wayland-tools/codegen/tests/: generate.rs
wayland-tools/macros/: Cargo.toml
wayland-tools/macros/src/: lib.rs
wayland-tools/parser/: Cargo.toml
wayland-tools/parser/src/: lib.rs  parse.rs  protocol.rs
wayland-tools/parser/tests/: parsing.rs
wayland-tools/scanner/: Cargo.toml
wayland-tools/scanner/src/: lib.rs
wl_common/: Cargo.toml
wl_common/src/: lib.rs
wl_common/src/utils/: geometry.rs  mod.rs
wl_io/: Cargo.toml
wl_io/src/: bin.rs  buf.rs  de.rs  lib.rs  utils.rs
wl_io_traits/: Cargo.toml
wl_io_traits/src/: lib.rs
wl_macros/: Cargo.toml
wl_macros/src/: lib.rs
wl_macros/tests/: generate.rs
wl_protocol/: Cargo.toml  build.rs
wl_protocol/src/: lib.rs
wl_scanner/: Cargo.toml
wl_scanner/src/: lib.rs
wl_scanner/tests/: generate.rs
wl_scanner_macros/: Cargo.toml
wl_scanner_macros/src/: lib.rs
wl_scanner_macros/tests/: generate.rs
wl_scanner_support/: Cargo.toml
wl_scanner_support/src/: lib.rs
wl_server/: Cargo.toml
wl_server/src/: connection.rs  display.rs  error.rs  events.rs  globals.rs  lib.rs  object_store.rs  objects.rs  provide_any.rs  provider_any.rs  renderer_capability.rs  server.rs  shared.rs  utils.rs
wl_spec/: Cargo.toml
wl_spec/src/: parse.rs  protocol.rs
wl_spec/tests/: parsing.rs
wl_types/: Cargo.toml
wl_types/src/: lib.rs
