[workspace]
resolver = "2"
members = [
  "apollo",
  "wl_server",
  "wl_spec",
  "wl_scanner",
  "wl_scanner_support",
  "wl_types",
  "wl_macros",
  "wl_io",
  "wl_io_traits",
  "wl_protocol",
  "crescent",
  "scanner_bench",
]
exclude = [
  "testbench"
]

[workspace.dependencies]
tracing = { version = "0.1", features = [ "release_max_level_off" ] }
hashbrown = "0.13"
ahash = "0.8"
futures-lite = "1.12.0"
futures-util = "0.3.24"
thiserror = "1.0.35"
derivative = "2.2.0"
dlv-list = { git = "https://github.com/yshui/dlv-list-rs" }
