[workspace]
resolver = "2"
members = [
  "apollo",
  "wl_server",
  "wl_spec",
  "wl_scanner",
  "wl_scanner_support",
  "wl_types",
  "wl_macros",
  "wl_io",
  "wl_io_traits",
  "wl_protocol",
  "crescent",
]
exclude = [
  "testbench"
]

[workspace.dependencies]
tracing = { version = "0.1", features = [ "release_max_level_off" ] }
hashbrown = "0.13"
ahash = "0.8"
futures-lite = "1.12.0"
futures-util = "0.3.24"
thiserror = "1.0.35"
derivative = "2.2.0"
bytes = "1"
dlv-list = "0.5.0"
pin-project-lite = "0.2"
ordered-float = "3.5.0"
indexmap = "1.9.2"
