[workspace]
resolver = "2"
members = [
  "runa-wayland-protocols",
  "runa-io",
  "runa-io-traits",
  "runa-macros",
  "runa-wayland-types",
  "runa-core",
  "runa-orbiter",
  "crescent",
  "input-event-codes-sys",

  # tools that deals with wayland protocol specs
  "wayland-tools/parser",
  "wayland-tools/codegen",
  "wayland-tools/scanner",
  "wayland-tools/macros"
]
exclude = [
  "testbench"
]

[workspace.dependencies]
tracing = { version = "0.1", features = [ "release_max_level_off" ] }
hashbrown = "0.14"
anyhow = "1.0.70"
bitflags = "2.0.2"
futures-lite = "2.2.0"
futures-util = "0.3.24"
thiserror = "1.0.35"
bytes = "1"
dlv-list = "0.5.0"
pin-project-lite = "0.2"
ordered-float = "4.2.0"
indexmap = "2.2.5"
tinyvec = "1.6.0"
rustix = "0.38.31"
syn = "1.0.109"
derive-where = "1.2.7"
proc-macro2 = "1.0.53"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = [ "Yuxuan Shui <yshuiv7@gmail.com>" ]
edition = "2021"
repository = "https://github.com/yshui/runa"
