[package]
name = "apollo"
description = "Reference implementation of Wayland objects"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
dlv-list.workspace = true
dyn-clone = "1.0.9"
futures-util.workspace = true
intrusive-collections = "0.9.4"
lazy_static = "1.4.0"
wl_protocol = { version = "0.1.0", path = "../wl_protocol" }
wl_server = { version = "0.1.0", path = "../wl_server" }
wl_types = { version = "0.1.0", path = "../wl_types" }
tracing.workspace = true
futures-channel = "0.3.25"
derivative.workspace = true
wl_io = { version = "0.1.0", path = "../wl_io" }
memmap2 = "0.5.7"
spin = { version = "0.9.4", default-features = false, features = ["mutex", "ticket_mutex", "use_ticket_mutex"] }
libc = "0.2.137"
hashbrown.workspace = true
num-traits = "0.2.15"
async-lock = "2.6.0"
futures-core = "0.3.26"
tinyvecdeq = { version = "0.1", features = ["std"] }
enum_dispatch = "0.3.11"
