[package]
name = "crescent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
smol = "1.2.5"
tracing-subscriber = "0.3.15"
runa-io = { version = "0.1.0", path = "../runa-io" }
runa-core = { version = "0.1.0", path = "../runa-core" }
futures-util.workspace = true
tracing.workspace = true
apollo = { version = "0.1.0", path = "../apollo" }
runa-wayland-protocols = { version = "0.1.0", path = "../runa-wayland-protocols" }
raw-window-handle = "0.5.0"
wgpu = "0.15.1"
winit = { version = "0.28.3", default-features = false, features = ["x11"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
png = "0.17.7"
dlv-list.workspace = true
slotmap = "1.0.6"
derivative.workspace = true
ordered-float.workspace = true
input-event-codes = { version = "0.1.0", path = "../input-event-codes" }
xkbcommon = { version = "0.5.0", default-features = false }
x11rb = "0.11.1"
tinyvec = { workspace = true, features = ["alloc"] }
memfd = "0.6.2"

[features]
default = []
dump_texture = []
