[package]
name = "crescent"
description = "Refernce wayland compositor for runa"
version = "0.0.1-alpha1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
smol = "1.2.5"
tracing-subscriber = "0.3.15"
runa-io = { path = "../runa-io" }
runa-core = { path = "../runa-core" }
futures-util.workspace = true
tracing.workspace = true
runa-orbiter = { path = "../runa-orbiter" }
runa-wayland-protocols = { path = "../runa-wayland-protocols" }
raw-window-handle = "0.5.0"
wgpu = "0.15.1"
winit = { version = "0.28.3", default-features = false, features = ["x11"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
png = "0.17.7"
dlv-list.workspace = true
slotmap = "1.0.6"
derivative.workspace = true
ordered-float.workspace = true
input-event-codes = { path = "../input-event-codes" }
xkbcommon = { version = "0.5.0", default-features = false }
x11rb = "0.11.1"
tinyvec = { workspace = true, features = ["alloc"] }
memfd = "0.6.2"

[features]
default = []
dump_texture = []
