[package]
name = "crescent"
description = "Refernce wayland compositor for runa"
version = "0.0.1-alpha1"
license = "MPL-2.0"
repository = "https://github.com/yshui/runa"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
smol = "2.0"
tracing-subscriber = "0.3.15"
runa-io = { version = "0.0.1-alpha1", path = "../runa-io" }
runa-core = { version = "0.0.1-alpha1", path = "../runa-core" }
futures-util.workspace = true
tracing.workspace = true
runa-orbiter = { version = "0.0.1-alpha1", path = "../runa-orbiter" }
runa-wayland-protocols = { version = "0.1.0", path = "../runa-wayland-protocols" }
raw-window-handle = "0.6.0"
wgpu = "0.19"
winit = { version = "0.29.13", default-features = false, features = ["x11", "rwh_06"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
png = "0.17.7"
dlv-list.workspace = true
slotmap = "1.0.6"
ordered-float.workspace = true
input-event-codes-sys = { version = "0.1.0", path = "../input-event-codes-sys" }
xkbcommon = { version = "0.5.0", default-features = false }
x11rb = "0.11.1"
tinyvec = { workspace = true, features = ["alloc"] }
memfd = "0.6.2"
derive-where.workspace = true

[features]
default = []
dump_texture = []
