[package]
name = "runa-core"
description = "Fundamental scaffolding for a Wayland compositor"
repository = "https://github.com/yshui/runa"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bitvec = "1.0.1"
event-listener = "2.5.3"
rustix = { workspace = true, features = ["fs"] }
smol = "1.2.5"
runa-io = { version = "0.0.1-alpha1", path = "../runa-io" }
runa-wayland-protocols = { version = "0.1.0", path = "../runa-wayland-protocols" }
xdg = "2.4.1"
thiserror.workspace = true
tracing.workspace = true
hashbrown.workspace = true
futures-lite.workspace = true
futures-util.workspace = true
dlv-list.workspace = true
runa-wayland-types = { version = "0.1.0", path = "../runa-wayland-types" }
memmap2 = "0.5.7"
lazy_static = "1.4.0"
derivative.workspace = true
static_assertions = "1.1.0"
runa-macros = { version = "0.0.1-alpha1", path = "../runa-macros" }
indexmap.workspace = true
futures-sink = "0.3.26"
slotmap = "1.0.6"
futures-channel = "0.3.26"
async-broadcast = "0.5.0"
futures-core = "0.3.26"
async-lock = "2.6.0"
pin-project = "1.0.12"
bytes.workspace = true

[features]
default = []
