[package]
name = "runa-io"
description = "Utilities for communicating with the wayland wire protocol"
repository = "https://github.com/yshui/runa"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha1"
edition = "2021"

[dependencies]
async-io = "1.9.0"
backtrace = "0.3.66"
byteorder = "1.4.3"
futures-core = "0.3.24"
futures-lite = "1.11.0"
libc = "0.2.132"
nix = "0.26"
pin-project-lite.workspace = true
smol = "1.2.5"
tinyvec = "1.6.0"
tracing.workspace = true
bytes.workspace = true
derivative.workspace = true
runa-io-traits = { version = "0.0.1-alpha1", path = "../runa-io-traits" }

[dev-dependencies]
anyhow = "1.0.65"
arbitrary = "1.1.6"
futures-executor = "0.3.24"
futures-test = "0.3.25"
rand = { version = "0.8.5", features = ["small_rng", "std"], default-features = false }
smol = "1.2.5"
tracing-subscriber = "0.3.15"

# used by tests
runa-wayland-protocols = { version = "0.1.0", path = "../runa-wayland-protocols" }
runa-wayland-types = { version = "0.1.0", path = "../runa-wayland-types" }
