[package]
name = "runa-wayland-protocols"
version = "0.1.0"
edition = "2021"

[build-dependencies]
runa-wayland-scanner = { path = "../wayland-tools/scanner" }
runa-wayland-spec-parser = { path = "../wayland-tools/parser" }

[dependencies]
futures-executor = "0.3"
futures-lite = "1.12.0"
# TODO: remove
num_enum = "0.5.7"
runa-wayland-scanner = { path = "../wayland-tools/scanner" }
