[package]
name = "runa-wayland-protocols"
description = "Generated types and traits for the Wayland protocols"
repository = "https://github.com/yshui/runa"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[build-dependencies]
runa-wayland-scanner = { path = "../wayland-tools/scanner" }
runa-wayland-spec-parser = { path = "../wayland-tools/parser" }

[dependencies]
futures-executor = "0.3"
futures-lite = "1.12.0"
num_enum = "0.5.7"
runa-wayland-scanner = { path = "../wayland-tools/scanner" }
