[package]
name = "wl_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.9.0"
byteorder = "1.4.3"
futures-core = "0.3.24"
futures-lite = "1.11.0"
libc = "0.2.132"
nix = "0.25.0"
pin-project-lite = "0.2.9"
serde = "1.0.144"
smol = "1.2.5"
tinyvec = "1.6.0"

[dev-dependencies]
anyhow = "1.0.65"
arbitrary = "1.1.6"
rand = { version = "0.8.5", features = ["small_rng", "std"], default-features = false }
smol = "1.2.5"
