[package]
name = "wl_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
heck = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["visit-mut"] }
wl_scanner = { path = "../wl_scanner" }
wl_spec = { path = "../wl_spec" }

[dev-dependencies]
futures-executor = "0.3"
futures-lite.workspace = true
wl_scanner_support = { path = "../wl_scanner_support" }
num_enum = "0.5.7"
futures-task = "0.3.24"
wl_io = { path = "../wl_io" }
