[package]
name = "runa-wayland-scanner"
description = "Generate Rust types and traits from Wayland XML protocol specifications"
repository = "https://github.com/yshui/runa"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags.workspace = true
num_enum = "0.5.7"
pin-project-lite = "0.2.9"
runa-wayland-types = { version = "0.1.0", path = "../../runa-wayland-types" }
runa-io-traits = { version = "0.0.1-alpha1", path = "../../runa-io-traits" }
futures-lite.workspace = true
bytes.workspace = true
thiserror.workspace = true
macros = { version = "0.1.0", package = "runa-wayland-scanner-macros", path = "../macros" }
codegen = { version = "0.1.0", package = "runa-wayland-scanner-codegen", path = "../codegen" }
